fixed overlapping pages error

--- a/style.css
+++ b/style.css
@@ -31,8 +31,7 @@ p {
   display: inline;
 }
 
-.header {
-  /* background-color: white; */
+#header {
   color: white;
   width: 100%;
   height: 20vh;
@@ -54,6 +53,20 @@ p {
   width: 250px;
   padding: 15px;
   margin-left: 20px;
+}
+
+#welcome-container {
+  position: absolute;
+  display: none;
+  grid-template-columns: repeat(auto-fill, 20vw);
+  column-gap: 30vw;
+  margin-top: 40vh;
+  left: 7vw;
+  width: 100%;
+  align-items: center;
+  margin-left: 120px;
+  margin-right: 120px;
+  align-content: space-between;
 }
 
 #alabyrinth-container {
